# jarvis-bigquery-sender

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
helm/jarvis-bigquery-sender/: Chart.yaml  values.yaml
helm/jarvis-bigquery-sender/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
src/: bigquery_client.rs  main.rs  nats_config.rs
