[package]
name = "jarvis-bigquery-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp-bigquery-client = "0.16"
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "v0.1.67" }
serde_json = "1.0"
signal-hook = "0.3"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
